# rmux

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.fr.md  README.ja.md  README.md  README.zh-CN.md  RELEASING.md  deny.toml  flake.nix  rmux.1  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/ratatui-rmux/: Cargo.toml  README.md
crates/ratatui-rmux/src/: lib.rs  scaffold.rs
crates/ratatui-rmux/tests/: ratatui_real_daemon_render_smoke.rs
crates/rmux-client/: Cargo.toml
crates/rmux-client/src/: attach.rs  attach_windows.rs  auto_start.rs  connection.rs  control.rs  lib.rs  nested.rs  upgrade.rs
crates/rmux-client/src/attach/: resize.rs  screen.rs  terminal.rs  tests.rs
crates/rmux-client/src/attach/resize/: linux.rs  macos.rs
crates/rmux-client/src/attach_windows/: action.rs  input.rs  stream.rs  stream_tests.rs  terminal.rs  terminal_tests.rs
crates/rmux-client/src/auto_start/: tests.rs  upgrade_restart.rs
crates/rmux-client/src/commands/: config.rs  pane.rs  scripting.rs  server.rs  session.rs  status.rs  web.rs  window.rs
crates/rmux-client/src/connection/: tests.rs
crates/rmux-client/tests/: attach_session.rs  raw_terminal.rs  session_lifecycle.rs  window_lifecycle.rs
crates/rmux-core/: Cargo.toml
crates/rmux-core/src/: command_parser.rs  dec_modes.rs  formats.rs  grid.rs  hooks.rs  keys.rs  lib.rs  lifecycle.rs  options.rs  screen.rs  session.rs  target_find.rs  terminal_passthrough.rs  terminal_screen.rs  utf8.rs  window.rs
crates/rmux-core/src/command_parser/: grammar.rs  lexer.rs  table.rs  tests.rs
crates/rmux-core/src/command_parser/lexer/: word.rs
crates/rmux-core/src/environment/: tests.rs
crates/rmux-core/src/events/: coalescing.rs  cursor.rs  registry.rs  ring.rs
crates/rmux-core/src/formats/: condition.rs  context.rs  expand.rs  expression.rs  glob.rs  modifiers.rs  time.rs  transforms.rs
crates/rmux-core/src/formats/tests/: operators.rs  skip_and_modifiers.rs  tables_time.rs  transformations.rs
crates/rmux-core/src/grid/: cell.rs  render.rs
crates/rmux-core/src/hooks/: rules.rs  tests.rs
crates/rmux-core/src/input/: commands.rs  dispatch.rs  mod.rs  mode.rs
crates/rmux-core/src/input/tests/: extended_timers_utf8.rs
crates/rmux-core/src/keys/: defaults.rs  tests.rs
crates/rmux-core/src/layout/: named.rs  parser.rs
crates/rmux-core/src/options/: mutation.rs  registry.rs  show.rs  table.rs  tests.rs
crates/rmux-core/src/options/tests/: effects_defaults.rs  mutation_unset.rs  registry_metadata.rs  show_validation.rs  store_resolution.rs
crates/rmux-core/src/screen/: capture.rs  selection.rs  tests.rs  view.rs  writer.rs
crates/rmux-core/src/session/: accessors.rs  pane_transfer.rs  pane_transfer_cross.rs  resize.rs  window_ops.rs  zoom_tests.rs
crates/rmux-core/src/target_find/: current.rs  matching.rs  metadata.rs  session.rs  syntax.rs  tests.rs  types.rs
crates/rmux-core/src/terminal/: mod.rs
crates/rmux-core/src/utf8/: tests.rs
crates/rmux-core/src/window/: layout_ops.rs
crates/rmux-ipc/: Cargo.toml
crates/rmux-os/: Cargo.toml
crates/rmux-proto/: Cargo.toml  README.md
crates/rmux-pty/: Cargo.toml
crates/rmux-render-core/: Cargo.toml
crates/rmux-render-core/src/: lib.rs
crates/rmux-sdk/: Cargo.toml  README.md
crates/rmux-server/: Cargo.toml
crates/rmux-types/: Cargo.toml
crates/rmux-web-crypto/: Cargo.toml  README.md  SECURITY.md
docs/: ARCHITECTURE.md  README.md  benchmarks.md  homebrew-packaging.md  linux-package-repositories.md  nix-packaging.md  scripting-sdk.md  web-share.md  windows-package-managers.md  wsl-human-ux.md
docs/examples/: wsl-human.conf
docs/i18n/: README.fr.md  README.ja.md  README.zh-CN.md
docs/man/: rmux.1
fuzz/: Cargo.toml
resources/windows/: rmux.exe.manifest
scripts/: build-web-crypto-wasm.sh  check-platform-neutrality.sh  gate-unix-fast.sh  gate-windows-fast.ps1  generate-apt-repository.sh  generate-chocolatey-package.sh  generate-homebrew-formula.sh  generate-rpm-repository.sh  generate-scoop-manifest.sh  generate-winget-manifest.sh  input-golden-traces-unix.sh  no-debug-assert-side-effects.sh  no-network-in-runtime.sh  package-debian.sh  package-rpm.sh  package-unix.sh  package-windows.ps1  perf-baseline.sh  perf-bench.sh  release-local.sh  release-review-gate-windows.ps1  release-review-gate.sh  smoke-installed-rmux.ps1  smoke-issue34-responsiveness-unix.sh  smoke-issue34-slow-attach-unix.sh  smoke-macos.sh  smoke-paste-runtime-unix.sh  smoke-sdk-v1.sh  smoke-tiny-release-review.sh  smoke-unix-deep.sh  smoke-unix.sh  tmux-compat-linux-check.py  unsafe-check.sh  validate-winget-manifest.ps1  verify-debian-package.sh  verify-package-windows.ps1  verify-package.sh  verify-rpm-package.sh
scripts/bench/: bench_unix.py  collect.py  render.py  run-unix.sh  run-windows.ps1
scripts/fuzz/: Cargo.toml
snap/: snapcraft.yaml
spec/: feature-inventory-v1.yaml
src/: cli.rs  cli_args.rs  cli_args_config_tests.rs  cli_args_layout_tests.rs  cli_args_tests.rs  cli_response.rs  daemon_main.rs  main.rs  process_locale.rs  tiny_main.rs
src/cli/: alias_fallback.rs  capabilities.rs  capture_pane.rs  client_commands.rs  client_environment.rs  command_inventory.rs  command_runner.rs  config_commands.rs  diagnose.rs  diagnose_tests.rs  dispatch.rs  error.rs  key_commands.rs  pane_commands.rs  server_commands.rs  session_commands.rs  startup.rs  target_resolution.rs  terminal_theme.rs  top_level.rs  web_commands.rs  (+2 more)
tests/: canonical_workflow.rs  cli_attach_flow.rs  cli_surface.rs  cli_window_surface.rs  control_mode_windows.rs  display_message.rs  formats.rs  internal_daemon.rs  internal_daemon_windows.rs  issue8_interactive_exit.rs  list_panes.rs  request_end_to_end.rs  scripting.rs  scripting_sdk.rs  sessions.rs  stress.rs  subscriptions_concurrent.rs  tmux_compat_harness.rs  tmux_compat_surface_matrix.rs  window_pane_flag_semantics.rs  windows_attach_exit.rs
xtask/: Cargo.toml
xtask/src/: completions.rs  feature_inventory.rs  main.rs
(+465 files in other folders)
