[workspace]
members = [
    ".",
    "crates/rmux-types",
    "crates/rmux-proto",
    "crates/rmux-core",
    "crates/rmux-os",
    "crates/rmux-ipc",
    "crates/rmux-pty",
    "crates/rmux-client",
    "crates/rmux-server",
    "crates/rmux-sdk",
    "crates/rmux-render-core",
    "crates/ratatui-rmux",
    "crates/rmux-web-crypto",
    "xtask",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "unwind"
strip = "symbols"

[profile.release.package.rmux-core]
opt-level = 3

[profile.release.package.rmux-ipc]
opt-level = "s"

[profile.release.package.rmux-os]
opt-level = "s"

[profile.release.package.rmux-proto]
opt-level = "s"

[profile.release.package.rmux-pty]
opt-level = "s"

[profile.release.package.rmux-server]
opt-level = 3

[profile.release.package.rmux]
opt-level = "s"
strip = "symbols"

[profile.release.package.rmux-types]
opt-level = "s"

[profile.release.package.rmux-web-crypto]
# `lto` is inherited from `[profile.release]`; Cargo does not allow it here.
codegen-units = 1
opt-level = 3
strip = false

[workspace.package]
version = "0.7.1"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/helvesec/rmux"

[package]
name = "rmux"
version = "0.7.1"
edition.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "A local terminal multiplexer with a tmux-style CLI, daemon runtime, Rust SDK, and ratatui integration."
readme = "README.md"
keywords = ["terminal", "multiplexer", "cli", "tui"]
categories = ["command-line-interface"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "build.rs",
    "resources/windows/rmux.exe.manifest",
    "docs/man/rmux.1",
    "src/**",
    "tests/**",
]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "=4.5.39", features = ["derive"] }
libc = "0.2"
qrcode = { version = "0.14", default-features = false }
ratatui = { version = "=0.29.0", default-features = false }
rmux-client = { path = "crates/rmux-client", version = "0.7.1" }
rmux-core = { path = "crates/rmux-core", version = "0.7.1" }
rmux-os = { path = "crates/rmux-os", version = "0.7.1" }
rmux-proto = { path = "crates/rmux-proto", version = "0.7.1" }
# The root binary owns the hidden internal daemon mode, so it links the server
# and Tokio runtime directly for that top-level re-exec path.
rmux-server = { path = "crates/rmux-server", version = "0.7.1", default-features = false }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["net", "rt", "rt-multi-thread", "time"] }

[features]
default = ["web"]
perf-instrument = ["rmux-server/perf-instrument"]
tiny-cli = []
web = ["rmux-server/web"]

[dev-dependencies]
libc = "0.2"
rmux-core = { path = "crates/rmux-core", version = "0.7.1" }
rmux-pty = { path = "crates/rmux-pty", version = "0.7.1" }
rmux-proto = { path = "crates/rmux-proto", version = "0.7.1" }
rmux-sdk = { path = "crates/rmux-sdk", version = "0.7.1" }
rustix = { version = "1.1.4", features = ["event", "termios"] }

[build-dependencies]
embed-manifest = "=1.4.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Pipes"] }

[[bin]]
name = "rmux"
path = "src/main.rs"

[[bin]]
name = "rmux-daemon"
path = "src/daemon_main.rs"
