[package]
name = "rmux-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rmux-server = { path = "../crates/rmux-server", features = ["web", "fuzzing"] }

[workspace]

[[bin]]
name = "websocket_client_frame"
path = "fuzz_targets/websocket_client_frame.rs"
test = false
doc = false
bench = false
