[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "=4.5.39", features = ["derive"] }
clap_complete = "=4.5.55"
rmux-core = { path = "../crates/rmux-core", version = "0.6.0" }
rmux-proto = { path = "../crates/rmux-proto", version = "0.6.0" }

[[bin]]
name = "xtask"
path = "src/main.rs"
