[package]
name = "rmux-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rmux-core = { path = "../rmux-core" }
rmux-proto = { path = "../rmux-proto" }
rustix = { version = "1.1.4", features = ["event", "net", "process", "runtime", "termios", "thread"] }

[dev-dependencies]
rmux-pty = { path = "../rmux-pty" }
rmux-server = { path = "../rmux-server" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
