[package]
name = "rmux-render-core"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
repository.workspace = true
description = "Pure-data RMUX pane snapshot and ratatui rendering core for browser and native hosts."
keywords = ["terminal", "multiplexer", "rendering"]
categories = ["command-line-interface", "wasm"]

[dependencies]
ratatui-core = { package = "ratatui", version = "=0.29.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
